--- a/client/src/app/components/current-site-info/current-site-info.component.html
+++ b/client/src/app/components/current-site-info/current-site-info.component.html
@@ -1,1 +1,4 @@
-<p>current-site-info works!</p>
+<div>
+
+    <Button class="btn btn-primary btn-block mb-3" (click)="startShopping()">Start Shopping</Button>
+</div>
