--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -34,6 +34,7 @@
             >
           </li>
         </ul>
+        <div >Welcome <span *ngIf="!username">Guest</span>{{username}}</div>
       </div>
     </div>
   </nav>
