--- a/client/src/app/components/categories/categories.component.html
+++ b/client/src/app/components/categories/categories.component.html
@@ -1,4 +1,3 @@
-    <div class="container-fluid">
-<span>Fruit</span>
-      </div>
-
+<div class="container-fluid">
+  <button *ngFor="let category of categories" (click)="onCategoryClick(category)" [title]="category">{{ category }}</button>
+</div>
