--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light ">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <button
         class="navbar-toggler"
@@ -28,14 +28,57 @@
               >Home</a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active-link" href="#"
-              >Features</a
+          <li *ngIf="user.role === 'Admin'" class="nav-item">
+            <a
+              class="nav-link"
+              routerLinkActive="active-link"
+              routerLink="/addItem"
+              >Add Item</a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" (click)="logOut()">Logout</a>
+          </li>
         </ul>
-        <div >Welcome <span *ngIf="!username">Guest</span>{{username}}</div>
+        <button class="m-2 pb-2 position-relative border-0 btn btn-info">
+          <span
+            class="position-absolute top-0 end-50 translate-middle badge rounded-pill bg-success"
+            >{{ cart }}</span
+          >
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-cart"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+            />
+          </svg>
+        </button>
+        <div>
+          Welcome <span *ngIf="!user.username">Guest</span>{{ user.username }}
+        </div>
       </div>
     </div>
   </nav>
+  <div *ngIf="isShopping">
+    <input (keyup)="onChangeSearch($event)" type="search" />
+
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      fill="currentColor"
+      class="bi bi-search m-1 pb-1"
+      viewBox="0 0 16 16"
+    >
+      <path
+        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+      />
+    </svg>
+  </div>
 </header>
