--- a/client/src/app/components/shopping-layout/shopping-layout.component.html
+++ b/client/src/app/components/shopping-layout/shopping-layout.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
   <div class="row">
-    <div class="col"><app-shopping-cart></app-shopping-cart></div>
-    <div class="col"><app-shopping></app-shopping></div>
+    <div class="col-3"><app-shopping-cart></app-shopping-cart></div>
+    <div class="col-9"><app-shopping></app-shopping></div>
   </div>
 </div>
