--- a/client/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/client/src/app/components/shopping-cart/shopping-cart.component.html
@@ -15,101 +15,32 @@
         Continue Shopping
       </button>
     </div>
-    <div *ngFor="let cartItem of cartItems" class="card mb-3 mb-lg-0">
-      <div class="card-body p-2">
-        <div class="d-flex justify-content-between w-100">
-          <div class="d-flex flex-row align-items-center">
-            <div class="m-1">
-              <img
-                [src]="'images/' + cartItem.picture"
-                class="img-thumbnail rounded-3"
-                alt="Shopping item"
-              />
-            </div>
-          </div>
-          <div class="d-flex flex-row align-items-center">
-            <div class="m-3 text-center">
-              <h6>{{ cartItem.productName }}</h6>
-              <div class="d-flex flex-row align-items-between">
-                <button (click)="addOneItem(cartItem)">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    class="bi bi-caret-up-fill"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"
-                    />
-                  </svg>
-                </button>
-                <div
-                  class="border border-dark text-center mx-auto"
-                  style="width: 32px"
-                >
-                  {{ cartItem.quantity }}
-                </div>
-                <button (click)="subtractOneItem(cartItem)">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    class="bi bi-caret-down-fill"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
-                    />
-                  </svg>
-                </button>
-              </div>
-            </div>
-            <div class="m-3 text-center">
-              <h6 class="mb-2">Price</h6>
-              <p class="mb-0 text-nowrap">&#x20AA;{{ cartItem.totalPrice }}</p>
-            </div>
-            <button
-              (click)="deleteAllOfItemType(cartItem.itemId!)"
-              style="color: #cecece"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-trash"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
-                />
-                <path
-                  fill-rule="evenodd"
-                  d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
-                />
-              </svg>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-cart-item
+      *ngFor="let cartItem of cartItems"
+      [cartItem]="cartItem"
+      class="card mb-3"
+    ></app-cart-item>
   </div>
-   <footer class="position-relative p-3 pb-2" style="background-color: #eee">
-      <div class="d-flex justify-content-between sticky-bottom" >
-        <h5>Total: &#x20AA;{{ total }}</h5>
-        <button class="btn btn-primary">Checkout</button>
-      </div>
-    </footer>
+  <footer class="position-relative p-3 pb-2" style="background-color: #eee">
+    <div class="d-flex justify-content-between sticky-bottom">
+      <h5>Total: &#x20AA;{{ total }}</h5>
+      <a class="btn btn-primary" (click)="offcanvas.close()" routerLink="/order"
+        >Proceed To Checkout</a
+      >
+    </div>
+  </footer>
 </ng-template>
 <div class="m-2 pb-2 position-relative">
   <span
-    class="position-absolute top-0 end-50 translate-middle badge rounded-pill bg-success"
+    style="z-index: 1"
+    class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-success"
     >{{ cartItems.length }}</span
   >
-  <button class="border-0 btn btn-info" (click)="openScroll(content)">
+  <button
+    [disabled]="offCanvasIsDisabled"
+    class="border-0 btn btn-info"
+    (click)="openScroll(content)"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="16"
