--- a/client/src/app/components/cart-item/cart-item.component.html
+++ b/client/src/app/components/cart-item/cart-item.component.html
@@ -1,11 +1,11 @@
 <div class="card-body p-2">
   <div class="d-flex justify-content-between">
     <div class="d-flex flex-row align-items-center">
-      <div class="m-1">
+      <div class="">
         <img
           [src]="'images/' + cartItem.picture"
           class="img-thumbnail rounded-3"
-          style="width: 65px"
+          style="width: 4rem"
           alt="Shopping item"
         />
       </div>
@@ -13,12 +13,12 @@
     <div *ngIf="!isOrder" class="d-flex flex-row align-items-center">
       <div class="m-3 text-center">
         <h6>{{ cartItem.productName }}</h6>
-        <div class="d-flex flex-row align-items-between">
-          <button (click)="addOneItem(cartItem)">
+        <div class="d-flex flex-row align-items-between px-3">
+          <button class="border-0 mb-2" (click)="addOneItem(cartItem)">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
+              width="12"
+              height="12"
               fill="currentColor"
               class="bi bi-caret-up-fill"
               viewBox="0 0 16 16"
@@ -29,16 +29,20 @@
             </svg>
           </button>
           <div
-            class="border border-dark text-center mx-auto"
-            style="width: 32px"
+            class="border border-dark text-center"
+            style="width: 25px; height: 25px"
           >
-            {{ cartItem.quantity }}
+            &times;{{ cartItem.quantity }}
           </div>
-          <button (click)="subtractOneItem(cartItem)">
+          <button
+            [disabled]="cartItem.quantity === 1"
+            class="border-0 mb-2"
+            (click)="subtractOneItem(cartItem)"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
+              width="12"
+              height="12"
               fill="currentColor"
               class="bi bi-caret-down-fill"
               viewBox="0 0 16 16"
@@ -57,12 +61,14 @@
       <button
         (click)="deleteAllOfItemType(cartItem.itemId!)"
         style="color: #cecece"
+        class="border-0"
+        title="Delete from cart"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
-          fill="currentColor"
+          fill="black"
           class="bi bi-trash"
           viewBox="0 0 16 16"
         >
@@ -76,17 +82,23 @@
         </svg>
       </button>
     </div>
-    <div *ngIf="isOrder" class="ms-3 text-center">
-      <h5>{{ cartItem.productName }}</h5>
-      <p class="small mb-0">&#x20AA;{{ cartItem.price }}</p>
+    <div *ngIf="isOrder" class="text-center m-2">
+      <h6>
+        <small class="text-center">{{ cartItem.productName }}</small>
+      </h6>
+      <p class="small text-center mb-0">
+        &#x20AA;{{ cartItem.price }} per unit
+      </p>
     </div>
 
-    <div *ngIf="isOrder" class="d-flex flex-row align-items-center ">
-      <div style="width: 50px">
-        <h5 class="fw-normal mb-0">{{ cartItem.quantity }}</h5>
+    <div *ngIf="isOrder" class="d-flex flex-row align-items-center text-center">
+      <div class="m-2">
+        <h6><small class="text-center">Quantity</small></h6>
+        <p class="fw-normal small-0">&times;{{ cartItem.quantity }}</p>
       </div>
-      <div *ngIf="isOrder" style="width: 80px">
-        <h5 class="mb-0">&#x20AA;{{ cartItem.totalPrice }}</h5>
+      <div *ngIf="isOrder" class="m-1">
+        <h6><small class="text-center">Total</small></h6>
+        <p class="small text-nowrap">&#x20AA;{{ cartItem.totalPrice }}</p>
       </div>
     </div>
   </div>
