--- a/client/src/app/components/shopping-cart/shopping-cart.component.css
+++ b/client/src/app/components/shopping-cart/shopping-cart.component.css
@@ -2,3 +2,10 @@
   border-right: black 1px solid;
   height: 100%;
 }
+
+a.disabled {
+  /* Make the disabled links grayish*/
+  color: gray;
+  /* And disable the pointer events */
+  pointer-events: none;
+}
