update main repository before downloading zip

--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,9 +1,9 @@
-<div class="text-center">
+<div class="text-center h-100">
   <h3>Welcome to Super Shlomo!</h3>
 
   <div>
     <p>
-      We have an array of wonderful products we personaly hand picked just for
+      We have an array of wonderful products we personally hand picked just for
       you!
     </p>
     <p>
@@ -17,6 +17,6 @@
     </p>
     <p>So what are you waiting for?</p>
     <p>Give it a try and invite all your friends as well!</p>
-    <p>We really appreciate you visiting! <br />Sincerly, <br />Shlomo</p>
+    <p>We really appreciate you visiting! <br />Sincerely, <br />Shlomo</p>
   </div>
 </div>
