--- a/client/src/app/components/edit-item/edit-item.component.html
+++ b/client/src/app/components/edit-item/edit-item.component.html
@@ -1,18 +1,22 @@
-<div class="tab-content">
-  <div
-    class="tab-pane fade show active"
-    id="pills-login"
-    role="tabpanel"
-    aria-labelledby="tab-login"
-  >
+<ng-template #content let-offcanvas>
+  <div class="offcanvas-header">
+    <h4 class="offcanvas-title">Shopping Cart</h4>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="offcanvas.dismiss('Cross click')"
+    ></button>
+  </div>
+  <div class="offcanvas-body" style="background-color: #eee">
     <form>
       <div class="form-outline mb-4">
         <input
-          required
           id="category"
-          [(ngModel)]="newItem.category"
+          [(ngModel)]="editedItem.category"
           name="category"
           class="form-control"
+          [placeholder]="item.category"
         />
         <!-- <option *ngFor="let category of categories" [value]="category">
             {{ category }}
@@ -23,31 +27,30 @@
 
       <div class="form-outline mb-4">
         <input
-          required
           type="text"
           id="loginPassword"
-          [(ngModel)]="newItem.productName"
+          [(ngModel)]="editedItem.productName"
           name="productName"
           class="form-control"
+          [placeholder]="item.productName"
         />
         <label class="form-label" for="productName">Name</label>
       </div>
 
       <div class="form-outline mb-4">
         <input
-          required
           type="number"
           id="Price"
-          [(ngModel)]="newItem.price"
+          [(ngModel)]="editedItem.price"
           name="Price"
           class="form-control"
+          [placeholder]="item.price"
         />
         <label class="form-label" for="Price">Price</label>
       </div>
 
       <div class="form-outline mb-4">
         <input
-          required
           type="file"
           id="Picture"
           (change)="onFileSelected($event)"
@@ -59,11 +62,13 @@
 
       <button
         type="submit"
-        (click)="addItem()"
+        (click)="editItem()"
         class="btn btn-primary btn-block mb-4"
       >
-        Add Item
+        Save
       </button>
     </form>
   </div>
-</div>
+</ng-template>
+
+<button class="btn btn-primary" (click)="openOffcanvas(content)">Edit</button>
