--- a/client/src/app/components/order-success/order-success.component.html
+++ b/client/src/app/components/order-success/order-success.component.html
@@ -37,6 +37,7 @@
 </div>
 
 <div class="modal-footer">
+  <a [href]="fileUrl" download="receipt.txt">Download Receipt</a>
   <a
     routerLink="/"
     class="btn btn-primary"
