--- a/client/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/client/src/app/components/shopping-cart/shopping-cart.component.html
@@ -34,7 +34,7 @@
     </div>
   </footer>
 </ng-template>
-<div class="m-2 pb-2 position-relative">
+<div class="m-2  position-relative">
   <span
     style="z-index: 1"
     class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-success"
