--- a/client/src/app/components/shopping/shopping.component.html
+++ b/client/src/app/components/shopping/shopping.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="items" class="container">
     <div class="row">
       <app-item
-        class="col col-xs-1 mb-3 "
+        class="col-sm mb-3 "
         *ngFor="let currentItem of items"
         [item]="currentItem"
       ></app-item>
