--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -19,16 +19,15 @@
       >
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a
-              class="nav-link"
-              routerLinkActive="active-link"
-              [routerLinkActiveOptions]="{ exact: true }"
-              aria-current="page"
-              routerLink="/"
-              >Home</a
-            >
+            <a class="nav-link" aria-current="page" routerLink="/"
+              ><img
+                src="/assets/logo.png"
+                alt="logo"
+                style="width: 2.5rem"
+                class="img-fluid ms-1"
+            /></a>
           </li>
-          <li *ngIf="user.role === 'Admin'" class="nav-item">
+          <li *ngIf="user.role === 'Admin'" class="nav-item my-2">
             <a
               class="nav-link"
               routerLinkActive="active-link"
@@ -36,13 +35,16 @@
               >Add Item</a
             >
           </li>
-          <li class="nav-item">
+          <li *ngIf="token" class="nav-item my-2">
             <a class="nav-link" href="#" (click)="logOut()">Logout</a>
           </li>
         </ul>
-        <app-shopping-cart></app-shopping-cart>
-        <div>
-          Welcome <span *ngIf="!user.username">Guest</span>{{ user.username }}
+        <app-shopping-cart *ngIf="user.role === 'Customer'"></app-shopping-cart>
+        <div style="height: 1.5rem">
+          <span class="my-2">
+            Hello <span *ngIf="!user.username">Guest</span
+            >{{ user.username | titlecase}}</span
+          >
         </div>
       </div>
     </div>
