--- a/client/src/app/components/layout/layout.component.html
+++ b/client/src/app/components/layout/layout.component.html
@@ -1,12 +1,13 @@
 <div class="container text-center">
   <div class="row">
-    <div class="col">
-    <app-login *ngIf="!isLoggedIn"></app-login>
+    <div class="col-sm">
+      <app-login *ngIf="!isLoggedIn"></app-login>
+      <app-logo *ngIf="isLoggedIn"></app-logo>
     </div>
-    <div class="col">
+    <div class="col-sm">
       <app-about></app-about>
     </div>
-    <div class="col">
+    <div class="col-sm">
       <app-current-site-info></app-current-site-info>
     </div>
   </div>
